# porous_media

./: .bumpversion.toml  .gitignore  .ruff.toml  .zenodo.json  INFORMATION.md  MANIFEST.in  README.md  README.rst  RELEASE.md  RoadMap.md  TODO.md  TODO_RoadMap.md  fcode.sh  mit.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  spp_meeting.md  tox.ini
.github/workflows/: main.yml  mypy.yml
data/: .gitignore  example.vtk  example2.vtk  simulation.xlsx  t0274.vtk
data/examples/Group_PF_ideal_TPM/: results.xdmf  results_interpolated_100.xdmf
data/examples/Group_PF_ideal_TPM/vtk/: Group_PF_ideal_TPM.t00.vtk  Group_PF_ideal_TPM.t01.vtk  Group_PF_ideal_TPM.t02.vtk  Group_PF_ideal_TPM.t03.vtk  Group_PF_ideal_TPM.t04.vtk  Group_PF_ideal_TPM.t05.vtk  Group_PF_ideal_TPM.t06.vtk  Group_PF_ideal_TPM.t07.vtk  Group_PF_ideal_TPM.t08.vtk  Group_PF_ideal_TPM.t09.vtk  Group_PF_ideal_TPM.t10.vtk
data/febio/: lobule_BCflux.feb.template  scan_pressure_flow.xlsx  spt_liver_small.xml
data/febio/febs_example1/: lobule_BCflux_sim1.feb  lobule_BCflux_sim2.feb
data/febio/scanpf/: lobule_BCflux_sim001.feb  lobule_BCflux_sim020.feb  lobule_BCflux_sim028.feb  lobule_BCflux_sim032.feb  lobule_BCflux_sim047.feb  lobule_BCflux_sim051.feb  lobule_BCflux_sim069.feb  lobule_BCflux_sim080.feb  lobule_BCflux_sim082.feb  lobule_BCflux_sim094.feb
data/vtk/sim1/: lobule_BCflux.t000.vtk  lobule_BCflux.t001.vtk  lobule_BCflux.t002.vtk  lobule_BCflux.t003.vtk  lobule_BCflux.t004.vtk  lobule_BCflux.t005.vtk  lobule_BCflux.t007.vtk  lobule_BCflux.t008.vtk  lobule_BCflux.t009.vtk  lobule_BCflux.t010.vtk  lobule_BCflux.t011.vtk  lobule_BCflux.t012.vtk  lobule_BCflux.t013.vtk  lobule_BCflux.t014.vtk  lobule_BCflux.t015.vtk  lobule_BCflux.t016.vtk  lobule_BCflux.t017.vtk  lobule_BCflux.t018.vtk  lobule_BCflux.t019.vtk  lobule_BCflux.t020.vtk  lobule_BCflux.t021.vtk  lobule_BCflux.t022.vtk  lobule_BCflux.t023.vtk  lobule_BCflux.t024.vtk  lobule_BCflux.t025.vtk  lobule_BCflux.t026.vtk  lobule_BCflux.t027.vtk  lobule_BCflux.t028.vtk  lobule_BCflux.t029.vtk  lobule_BCflux.t030.vtk  lobule_BCflux.t031.vtk  lobule_BCflux.t032.vtk  lobule_BCflux.t033.vtk  lobule_BCflux.t034.vtk  lobule_BCflux.t035.vtk  lobule_BCflux.t036.vtk  lobule_BCflux.t037.vtk  lobule_BCflux.t038.vtk  lobule_BCflux.t039.vtk  lobule_BCflux.t040.vtk  (+281 more)
data/vtk_test/: lobule_BCflux_sim021.t0001.vtk
docs/: Computational.Life.Science_status_seminar.md  ICCB2023_meeting_notes.md  INFORMATION.md  build_roadrunner.md  build_roadrunner_febio.md  run_febio_simulation.md  run_febio_simulations.md
febio/: lobule_BCflux.feb
release-notes/: 0.1.0.md  0.1.1.md  0.1.2.md  0.1.3.md  0.1.4.md  0.1.5.md  0.1.6.md  0.1.8.md  0.2.0.md  0.2.1.md  0.2.2.md  0.3.0.md
src/pm/: __init__.py  log.py  majavi_example.py  mesh_tools.py  process_vtk.py  vedo_example.py  visualization.py  vtk_example.py  vtk_tools.py  vtk_visualization.py
src/pm/analyses/: mesh_zonation.h5  mesh_zonation.py  mesh_zonation.vtk  mesh_zonation.xdmf  simvliva_publication.py  spt_publication.py
src/pm/analyses/simliva/: simvliva_publication.py
src/pm/analyses/spt/: spt_publication.py
src/pm/febio/: feb_manipulation.py  process_simulation.py
src/pm/mesh/: mesh_operations.py  mesh_tools.py  mesh_zonation.py
src/pm/simliva/: image_manipulation.py  lobule_BCflux.t006.vtk  pyvista_visualization.py  simliva_visualization1.py  simliva_visualization_mlab.py  simliva_visualization_pyvista.py  structured_grid_example.py  t2793.vtk  unstructured_grid.py
src/pm/visualization/: image_manipulation.py  pyvista_visualization.py
src/porous_media/: __init__.py  log.py
src/porous_media/analyses/: __init__.py  example_processing_interpolation.py  liver_variables.py
src/porous_media/analyses/droplets/: mesh_no_pressure.vtk  mesh_no_pressure_protein.vtk  mesh_no_pressure_protein.xdmf  mesh_zonation.py
src/porous_media/analyses/examples/: groups.py
src/porous_media/analyses/lobulus_composition/: edge_finder.ipynb  plots_geometry.py  plots_interactive.py
src/porous_media/analyses/simliva/: simliva_example.py  simvliva_publication.py
src/porous_media/analyses/spt/: MII-symposium.md  __init__.py  lobulus_composition.py  spt.md  spt_data_processing.py  spt_fixed_selections.py  spt_information.py  spt_liver_visualizations.py  spt_liver_visualizations2.py  spt_plots_analysis.py  spt_plots_geometry.py  spt_publication.py  spt_sim_information.py  spt_substrate_scan.py  spt_zonation_patterns.py  spt_zonation_patterns_plot2d_necrosis.py
src/porous_media/data/: liver_visualizations.py  liver_visualizations2.py  xdmf_calculations.py  xdmf_tools.py
src/porous_media/febio/: feb_manipulation.py  febio_manipulation.py  results_processing.py  xplt_conversion_example.py
src/porous_media/febio/febpy/: febio_vtk.py  xplt.py  xplt_enums.py
src/porous_media/mesh/: mesh.md  mesh_geojson.py  mesh_tools.py  mesh_zonation.py
src/porous_media/mesh/oven/: gmsh_lobule_test.py  occ_box.py
src/porous_media/resources/vtk/vtk_single/: lobule_BCflux_sim021.t0000.vtk  lobule_zonation_pattern.t0022.vtk
src/porous_media/resources/vtk/vtk_timecourse/: lobule_zonation_pattern.t0008.vtk
src/porous_media/resources/zonation/: mesh_zonation_lobulus.vtk
src/porous_media/visualization/: image_annotation.py  image_manipulation.py  plots.py  pyvista_visualization.py  video.py  vtu_reader.py
tests/zonation/: test_mesh_zonation.py  test_xdmf_tools.py
