[bumpversion]
current_version = 0.1.4
commit = True
tag = True
parse = (?P<major>\d+)
	\.(?P<minor>\d+)
	\.(?P<patch>\d+)
	(?P<release>[a]*)(?P<num>\d*)
serialize =
	{major}.{minor}.{patch}{release}{num}
	{major}.{minor}.{patch}
tag_name = {new_version}

[metadata]
name = protein-distribution
url = https://github.com/matthiaskoenig/protein-distribution
download_url = https://pypi.org/project/protein-distribution
project_urls =
	Source Code = https://github.com/matthiaskoenig/protein-distribution
	Documentation = https://github.com/matthiaskoenig/protein-distribution
	Bug Tracker = https://github.com/matthiaskoenig/protein-distribution/issues
author = Matthias Koenig
author_email = konigmatt@googlemail.com
maintainer = Matthias Koenig
maintainer_email = konigmatt@googlemail.com
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Bio-Informatics
license = LGPL-3.0
description = pyton package for accessing protein distribution data.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
	liver
	CYP
	UGT
	SLC
	ABC

[options]
zip_safe = True
python_requires = >=3.9
install_requires =
	requests>=2.31.0
	pandas>=2.1.0
	numpy>=1.25.2
	scipy>=1.11.2
	matplotlib>=3.7.2
	seaborn>=0.12.2
	openpyxl>=3.1.2
	rich>=13.5.2
	xmltodict>=0.13.0
	pydantic>=2.3.0
	statsmodels>=0.14.0
tests_require =
	tox>=4.11.1
	pytest
packages = find:
package_dir =
	= src
include_package_data = True

[options.package_data]
protein-distribution = py.typed

[aliases]
test = pytest

[options.packages.find]
where = src

[options.extras_require]
development =
	pip-tools>6.5.1
	black>=23.1.0
	bump2version>=1.0.1
	isort>=5.12.0
	tox>=4.11.1
	flake8>=4.0.1
	flake8-mypy>=17.8.0
	mypy>=0.931
	pytest>=7.0.1
	pytest-cov>=3.0.0

[bdist_wheel]
universal = 1

[bumpversion:part:release]
optional_value = placeholder
first_value = placeholder
values =
	placeholder
	a

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:src/protein_distribution/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
