[bumpversion]
current_version = 0.2.1
commit = True
tag = True
parse = (?P<major>\d+)
	\.(?P<minor>\d+)
	\.(?P<patch>\d+)
	(?P<release>[a]*)(?P<num>\d*)
serialize = 
	{major}.{minor}.{patch}{release}{num}
	{major}.{minor}.{patch}
tag_name = {new_version}

[metadata]
name = porous_media
url = https://github.com/matthiaskoenig/porous_media
download_url = https://pypi.org/project/porous_media
project_urls = 
	Source Code = https://github.com/matthiaskoenig/porous_media
	Documentation = https://github.com/matthiaskoenig/porous_media
	Bug Tracker = https://github.com/matthiaskoenig/porous_media/issues
author = Matthias Koenig
author_email = konigmatt@googlemail.com
maintainer = Matthias Koenig
maintainer_email = konigmatt@googlemail.com
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Bio-Informatics
license = LGPL-3.0
description = python package working with porous media
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = 
	porous media

[options]
zip_safe = True
python_requires = >=3.9
install_requires = 
	pandas>=2.0.3
	xarray>=2023.8.0
	openpyxl>=3.1.2
	rich>=13.4.2
	meshio>=5.3.4
	meshplex>=0.19.1
	pyvista>=0.40.1
	scipy>=1.11.1
	dataclasses-json>=0.6.0
	jinja2>=3.1.2
	Pillow>=10.0.0
	h5py>=3.9
tests_require = 
	tox>=4.11.1
	pytest
packages = find:
package_dir = 
	= src
include_package_data = True

[options.package_data]
porous_media = py.typed

[aliases]
test = pytest

[options.packages.find]
where = src

[options.extras_require]
development = 
	pip-tools>6.10
	black>=24.1.1
	bump2version>=1.0.1
	isort>=5.13.2
	tox>=4.12.1
	flake8>=6.1.0
	flake8-mypy>=17.8.0
	mypy>=1.8.0
	pytest>=8.0.0
	pytest-cov>=4.1.0

[bdist_wheel]
universal = 1

[bumpversion:part:release]
optional_value = placeholder
first_value = placeholder
values = 
	placeholder
	a

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:src/porous_media/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
